--- a/리버/spring/src/main/resources/application.yml
+++ b/리버/spring/src/main/resources/application.yml
@@ -17,3 +17,18 @@ spring:
         hbm2ddl:
           auto: update
         default_batch_fetch_size: 1000
+springdoc:
+  swagger-ui:
+    path: api-docs
+    tags-sorter: alpha
+    operations-sorter: alpha
+  api-docs:
+    path: /api-docs/json
+    groups:
+      enabled: true
+  cache:
+    disabled: true
+  default-consumes-media-type: application/json
+  default-produces-media-type: application/json
+  paths-to-match:
+    - /**
